--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "typescript": "^4.3.4",
     "web-vitals": "^1.0.1"
   },
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/react-router-dom": "^5.1.7"
   }
 }
