--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.23",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
