--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "apollo-link-context": "^1.0.20",
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
